removed margin-left rule in .row (fixed content position to a central on mobile screensize)

--- a/css/style.css
+++ b/css/style.css
@@ -145,10 +145,7 @@ body {
     text-align: center; 
 }
 
-.row {
-    margin-left: 100px; 
-    margin-right: 0;
-}
+
 
 .organisation-role{
     margin: 25px;
